# qhot

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  qhot.pro  resources.qrc
.github/workflows/: release.yml
deploy/: qhot.desktop
examples/simple_plasmoid/: simple_plasmoid.qml
examples/translation/: translation.qml  translation_pt_BR.qm  translation_pt_BR.ts
qml/: main.qml  recover.qml
src/: CMakeLists.txt  main.cpp  providessomething.cpp  providessomething.h  urlinterceptor.cpp  urlinterceptor.h
src/commandline/: commandlineparser.cpp  commandlineparser.h  commandlineparser.pri
